# project-ult-subsystem-holdings

./: .gitignore  Makefile  README.md  pyproject.toml
.github/workflows/: ci.yml
docs/: producer-runbook.md
docs/evidence/: live-producer-proof-20260507-attempt2.md  live-producer-proof-20260507.md  live-producer-proof-blockers-20260506.md  read-only-mart-adapter-proof-20260506.md
scripts/: proof_queue_submit_path.py  proof_real_queue_submit_path.py  run_production_queue_submit.py
src/subsystem_holdings/: __init__.py  alignment.py  entity_registry_adapter.py  errors.py  mart_adapter.py  models.py  producer.py  public.py  reader.py  scope.py  submit_client.py
tests/: conftest.py
tests/boundary/: test_boundary_red_lines.py  test_producer_runbook_docs.py
tests/contract/: test_data_platform_queue_submit.py  test_ex3_payload_and_submit.py  test_production_queue_submit_runner.py  test_real_queue_submit_runner.py
tests/unit/: test_entity_registry_adapter_alignment.py  test_fake_reader_and_alignment.py  test_holdings_scope.py  test_package_public.py  test_read_only_mart_adapter.py
